Add ZGC option in installer